gen/geneticalParser.py
# Generated from C:/Users/fudal/OneDrive/Desktop/AGH/ISI/Semestr 4/pythonProject\genetical.g4 by ANTLR 4.10.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys

if sys.version_info[1] > 5:
    from typing import TextIO
else:
    from typing.io import TextIO




class geneticalParser(Parser):
    grammarFileName = "genetical.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [DFA(ds, i) for i, ds in enumerate(atn.decisionToState)]

    sharedContextCache = PredictionContextCache()

    literalNames = ["<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                    "<INVALID>", "'n_'", "'b_'", "<INVALID>", "'('", "')'",
                    "'{'", "'}'", "'+'", "'-'", "'*'", "'/'", "'>'", "'<'",
                    "'='", "'=='", "'.'", "'^'", "'if'", "' &'", "'|'",
                    "<INVALID>", "'while'", "';'"]

    symbolicNames = ["<INVALID>", "NUMBER", "VARIABLE", "BOOL_VARIABLE",
                     "NUM_VARIABLE", "NUM_NAME", "BOOL_NAME", "ID_NUM",
                     "LPAREN", "RPAREN", "LPARENCURLY", "RPARENCURLY",
                     "PLUS", "MINUS", "TIMES", "DIV", "GT", "LT", "EQ",
                     "EQ_LOGICAL", "POINT", "POW", "IF", "AND", "OR", "WS",
                     "WHILE", "ENDCHAR"]

    RULE_file_ = 0
    RULE_blockseq = 1
    RULE_block = 2
    RULE_variableOperation = 3
    RULE_loopBlock = 4
    RULE_ifBlock = 5
    RULE_variableDefinition = 6
    RULE_logicalExp = 7
    RULE_relopLogical = 8
    RULE_equation = 9
    RULE_expression = 10
    RULE_atom = 11
    RULE_variable = 12
    RULE_relop = 13

    ruleNames = ["file_", "blockseq", "block", "variableOperation", "loopBlock",
                 "ifBlock", "variableDefinition", "logicalExp", "relopLogical",
                 "equation", "expression", "atom", "variable", "relop"]

    EOF = Token.EOF
    NUMBER = 1
    VARIABLE = 2
    BOOL_VARIABLE = 3
    NUM_VARIABLE = 4
    NUM_NAME = 5
    BOOL_NAME = 6
    ID_NUM = 7
    LPAREN = 8
    RPAREN = 9
    LPARENCURLY = 10
    RPARENCURLY = 11
    PLUS = 12
    MINUS = 13
    TIMES = 14
    DIV = 15
    GT = 16
    LT = 17
    EQ = 18
    EQ_LOGICAL = 19
    POINT = 20
    POW = 21
    IF = 22
    AND = 23
    OR = 24
    WS = 25
    WHILE = 26
    ENDCHAR = 27

    def __init__(self, input: TokenStream, output: TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.10.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None

    class File_Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(geneticalParser.EOF, 0)

        def blockseq(self):
            return self.getTypedRuleContext(geneticalParser.BlockseqContext, 0)

        def getRuleIndex(self):
            return geneticalParser.RULE_file_

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterFile_"):
                listener.enterFile_(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitFile_"):
                listener.exitFile_(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitFile_"):
                return visitor.visitFile_(self)
            else:
                return visitor.visitChildren(self)

    def file_(self):

        localctx = geneticalParser.File_Context(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_file_)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 29
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & (
                    (1 << geneticalParser.VARIABLE) | (1 << geneticalParser.IF) | (1 << geneticalParser.WHILE))) != 0):
                self.state = 28
                self.blockseq()

            self.state = 31
            self.match(geneticalParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BlockseqContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def block(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(geneticalParser.BlockContext)
            else:
                return self.getTypedRuleContext(geneticalParser.BlockContext, i)

        def getRuleIndex(self):
            return geneticalParser.RULE_blockseq

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterBlockseq"):
                listener.enterBlockseq(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitBlockseq"):
                listener.exitBlockseq(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitBlockseq"):
                return visitor.visitBlockseq(self)
            else:
                return visitor.visitChildren(self)

    def blockseq(self):

        localctx = geneticalParser.BlockseqContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_blockseq)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 34
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 33
                self.block()
                self.state = 36
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & (
                        (1 << geneticalParser.VARIABLE) | (1 << geneticalParser.IF) | (
                        1 << geneticalParser.WHILE))) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variableDefinition(self):
            return self.getTypedRuleContext(geneticalParser.VariableDefinitionContext, 0)

        def variableOperation(self):
            return self.getTypedRuleContext(geneticalParser.VariableOperationContext, 0)

        def ifBlock(self):
            return self.getTypedRuleContext(geneticalParser.IfBlockContext, 0)

        def loopBlock(self):
            return self.getTypedRuleContext(geneticalParser.LoopBlockContext, 0)

        def getRuleIndex(self):
            return geneticalParser.RULE_block

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterBlock"):
                listener.enterBlock(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitBlock"):
                listener.exitBlock(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitBlock"):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)

    def block(self):

        localctx = geneticalParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_block)
        try:
            self.state = 42
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input, 2, self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 38
                self.variableDefinition()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 39
                self.variableOperation()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 40
                self.ifBlock()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 41
                self.loopBlock()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VariableOperationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VARIABLE(self):
            return self.getToken(geneticalParser.VARIABLE, 0)

        def EQ(self):
            return self.getToken(geneticalParser.EQ, 0)

        def expression(self):
            return self.getTypedRuleContext(geneticalParser.ExpressionContext, 0)

        def ENDCHAR(self):
            return self.getToken(geneticalParser.ENDCHAR, 0)

        def logicalExp(self):
            return self.getTypedRuleContext(geneticalParser.LogicalExpContext, 0)

        def getRuleIndex(self):
            return geneticalParser.RULE_variableOperation

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterVariableOperation"):
                listener.enterVariableOperation(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitVariableOperation"):
                listener.exitVariableOperation(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitVariableOperation"):
                return visitor.visitVariableOperation(self)
            else:
                return visitor.visitChildren(self)

    def variableOperation(self):

        localctx = geneticalParser.VariableOperationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_variableOperation)
        try:
            self.state = 54
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input, 3, self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 44
                self.match(geneticalParser.VARIABLE)
                self.state = 45
                self.match(geneticalParser.EQ)
                self.state = 46
                self.expression(0)
                self.state = 47
                self.match(geneticalParser.ENDCHAR)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 49
                self.match(geneticalParser.VARIABLE)
                self.state = 50
                self.match(geneticalParser.EQ)
                self.state = 51
                self.logicalExp(0)
                self.state = 52
                self.match(geneticalParser.ENDCHAR)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class LoopBlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(geneticalParser.WHILE, 0)

        def LPAREN(self):
            return self.getToken(geneticalParser.LPAREN, 0)

        def logicalExp(self):
            return self.getTypedRuleContext(geneticalParser.LogicalExpContext, 0)

        def RPAREN(self):
            return self.getToken(geneticalParser.RPAREN, 0)

        def LPARENCURLY(self):
            return self.getToken(geneticalParser.LPARENCURLY, 0)

        def blockseq(self):
            return self.getTypedRuleContext(geneticalParser.BlockseqContext, 0)

        def RPARENCURLY(self):
            return self.getToken(geneticalParser.RPARENCURLY, 0)

        def getRuleIndex(self):
            return geneticalParser.RULE_loopBlock

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterLoopBlock"):
                listener.enterLoopBlock(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitLoopBlock"):
                listener.exitLoopBlock(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitLoopBlock"):
                return visitor.visitLoopBlock(self)
            else:
                return visitor.visitChildren(self)

    def loopBlock(self):

        localctx = geneticalParser.LoopBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_loopBlock)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 56
            self.match(geneticalParser.WHILE)
            self.state = 57
            self.match(geneticalParser.LPAREN)
            self.state = 58
            self.logicalExp(0)
            self.state = 59
            self.match(geneticalParser.RPAREN)
            self.state = 60
            self.match(geneticalParser.LPARENCURLY)
            self.state = 61
            self.blockseq()
            self.state = 62
            self.match(geneticalParser.RPARENCURLY)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class IfBlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(geneticalParser.IF, 0)

        def LPAREN(self):
            return self.getToken(geneticalParser.LPAREN, 0)

        def logicalExp(self):
            return self.getTypedRuleContext(geneticalParser.LogicalExpContext, 0)

        def RPAREN(self):
            return self.getToken(geneticalParser.RPAREN, 0)

        def LPARENCURLY(self):
            return self.getToken(geneticalParser.LPARENCURLY, 0)

        def blockseq(self):
            return self.getTypedRuleContext(geneticalParser.BlockseqContext, 0)

        def RPARENCURLY(self):
            return self.getToken(geneticalParser.RPARENCURLY, 0)

        def getRuleIndex(self):
            return geneticalParser.RULE_ifBlock

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterIfBlock"):
                listener.enterIfBlock(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitIfBlock"):
                listener.exitIfBlock(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitIfBlock"):
                return visitor.visitIfBlock(self)
            else:
                return visitor.visitChildren(self)

    def ifBlock(self):

        localctx = geneticalParser.IfBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_ifBlock)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 64
            self.match(geneticalParser.IF)
            self.state = 65
            self.match(geneticalParser.LPAREN)
            self.state = 66
            self.logicalExp(0)
            self.state = 67
            self.match(geneticalParser.RPAREN)
            self.state = 68
            self.match(geneticalParser.LPARENCURLY)
            self.state = 69
            self.blockseq()
            self.state = 70
            self.match(geneticalParser.RPARENCURLY)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VariableDefinitionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variable(self):
            return self.getTypedRuleContext(geneticalParser.VariableContext, 0)

        def EQ(self):
            return self.getToken(geneticalParser.EQ, 0)

        def NUMBER(self):
            return self.getToken(geneticalParser.NUMBER, 0)

        def ENDCHAR(self):
            return self.getToken(geneticalParser.ENDCHAR, 0)

        def equation(self):
            return self.getTypedRuleContext(geneticalParser.EquationContext, 0)

        def getRuleIndex(self):
            return geneticalParser.RULE_variableDefinition

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterVariableDefinition"):
                listener.enterVariableDefinition(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitVariableDefinition"):
                listener.exitVariableDefinition(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitVariableDefinition"):
                return visitor.visitVariableDefinition(self)
            else:
                return visitor.visitChildren(self)

    def variableDefinition(self):

        localctx = geneticalParser.VariableDefinitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_variableDefinition)
        try:
            self.state = 82
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input, 4, self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 72
                self.variable()
                self.state = 73
                self.match(geneticalParser.EQ)
                self.state = 74
                self.match(geneticalParser.NUMBER)
                self.state = 75
                self.match(geneticalParser.ENDCHAR)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 77
                self.variable()
                self.state = 78
                self.match(geneticalParser.EQ)
                self.state = 79
                self.equation()
                self.state = 80
                self.match(geneticalParser.ENDCHAR)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class LogicalExpContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(geneticalParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(geneticalParser.ExpressionContext, i)

        def relopLogical(self):
            return self.getTypedRuleContext(geneticalParser.RelopLogicalContext, 0)

        def logicalExp(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(geneticalParser.LogicalExpContext)
            else:
                return self.getTypedRuleContext(geneticalParser.LogicalExpContext, i)

        def LPAREN(self):
            return self.getToken(geneticalParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(geneticalParser.RPAREN, 0)

        def atom(self):
            return self.getTypedRuleContext(geneticalParser.AtomContext, 0)

        def PLUS(self, i: int = None):
            if i is None:
                return self.getTokens(geneticalParser.PLUS)
            else:
                return self.getToken(geneticalParser.PLUS, i)

        def MINUS(self, i: int = None):
            if i is None:
                return self.getTokens(geneticalParser.MINUS)
            else:
                return self.getToken(geneticalParser.MINUS, i)

        def getRuleIndex(self):
            return geneticalParser.RULE_logicalExp

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterLogicalExp"):
                listener.enterLogicalExp(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitLogicalExp"):
                listener.exitLogicalExp(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitLogicalExp"):
                return visitor.visitLogicalExp(self)
            else:
                return visitor.visitChildren(self)

    def logicalExp(self, _p: int = 0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = geneticalParser.LogicalExpContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 14
        self.enterRecursionRule(localctx, 14, self.RULE_logicalExp, _p)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input, 6, self._ctx)
            if la_ == 1:
                self.state = 85
                self.expression(0)
                self.state = 86
                self.relopLogical()
                self.state = 87
                self.logicalExp(4)
                pass

            elif la_ == 2:
                self.state = 89
                self.expression(0)
                self.state = 90
                self.relopLogical()
                self.state = 91
                self.expression(0)
                pass

            elif la_ == 3:
                self.state = 93
                self.match(geneticalParser.LPAREN)
                self.state = 94
                self.expression(0)
                self.state = 95
                self.match(geneticalParser.RPAREN)
                pass

            elif la_ == 4:
                self.state = 100
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la == geneticalParser.PLUS or _la == geneticalParser.MINUS:
                    self.state = 97
                    _la = self._input.LA(1)
                    if not (_la == geneticalParser.PLUS or _la == geneticalParser.MINUS):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                    self.state = 102
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 103
                self.atom()
                pass

            self._ctx.stop = self._input.LT(-1)
            self.state = 112
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input, 7, self._ctx)
            while _alt != 2 and _alt != ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = geneticalParser.LogicalExpContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_logicalExp)
                    self.state = 106
                    if not self.precpred(self._ctx, 5):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 5)")
                    self.state = 107
                    self.relopLogical()
                    self.state = 108
                    self.logicalExp(6)
                self.state = 114
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input, 7, self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class RelopLogicalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EQ_LOGICAL(self):
            return self.getToken(geneticalParser.EQ_LOGICAL, 0)

        def GT(self):
            return self.getToken(geneticalParser.GT, 0)

        def LT(self):
            return self.getToken(geneticalParser.LT, 0)

        def AND(self):
            return self.getToken(geneticalParser.AND, 0)

        def OR(self):
            return self.getToken(geneticalParser.OR, 0)

        def getRuleIndex(self):
            return geneticalParser.RULE_relopLogical

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterRelopLogical"):
                listener.enterRelopLogical(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitRelopLogical"):
                listener.exitRelopLogical(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitRelopLogical"):
                return visitor.visitRelopLogical(self)
            else:
                return visitor.visitChildren(self)

    def relopLogical(self):

        localctx = geneticalParser.RelopLogicalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_relopLogical)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            _la = self._input.LA(1)
            if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & (
                    (1 << geneticalParser.GT) | (1 << geneticalParser.LT) | (1 << geneticalParser.EQ_LOGICAL) | (
                    1 << geneticalParser.AND) | (1 << geneticalParser.OR))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class EquationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(geneticalParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(geneticalParser.ExpressionContext, i)

        def relop(self):
            return self.getTypedRuleContext(geneticalParser.RelopContext, 0)

        def relopLogical(self):
            return self.getTypedRuleContext(geneticalParser.RelopLogicalContext, 0)

        def getRuleIndex(self):
            return geneticalParser.RULE_equation

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterEquation"):
                listener.enterEquation(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitEquation"):
                listener.exitEquation(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitEquation"):
                return visitor.visitEquation(self)
            else:
                return visitor.visitChildren(self)

    def equation(self):

        localctx = geneticalParser.EquationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_equation)
        try:
            self.state = 125
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input, 8, self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 117
                self.expression(0)
                self.state = 118
                self.relop()
                self.state = 119
                self.expression(0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 121
                self.expression(0)
                self.state = 122
                self.relopLogical()
                self.state = 123
                self.expression(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LPAREN(self):
            return self.getToken(geneticalParser.LPAREN, 0)

        def expression(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(geneticalParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(geneticalParser.ExpressionContext, i)

        def RPAREN(self):
            return self.getToken(geneticalParser.RPAREN, 0)

        def atom(self):
            return self.getTypedRuleContext(geneticalParser.AtomContext, 0)

        def PLUS(self, i: int = None):
            if i is None:
                return self.getTokens(geneticalParser.PLUS)
            else:
                return self.getToken(geneticalParser.PLUS, i)

        def MINUS(self, i: int = None):
            if i is None:
                return self.getTokens(geneticalParser.MINUS)
            else:
                return self.getToken(geneticalParser.MINUS, i)

        def POW(self):
            return self.getToken(geneticalParser.POW, 0)

        def TIMES(self):
            return self.getToken(geneticalParser.TIMES, 0)

        def DIV(self):
            return self.getToken(geneticalParser.DIV, 0)

        def getRuleIndex(self):
            return geneticalParser.RULE_expression

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterExpression"):
                listener.enterExpression(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitExpression"):
                listener.exitExpression(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitExpression"):
                return visitor.visitExpression(self)
            else:
                return visitor.visitChildren(self)

    def expression(self, _p: int = 0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = geneticalParser.ExpressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 20
        self.enterRecursionRule(localctx, 20, self.RULE_expression, _p)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 139
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [geneticalParser.LPAREN]:
                self.state = 128
                self.match(geneticalParser.LPAREN)
                self.state = 129
                self.expression(0)
                self.state = 130
                self.match(geneticalParser.RPAREN)
                pass
            elif token in [geneticalParser.NUMBER, geneticalParser.VARIABLE, geneticalParser.PLUS,
                           geneticalParser.MINUS]:
                self.state = 135
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la == geneticalParser.PLUS or _la == geneticalParser.MINUS:
                    self.state = 132
                    _la = self._input.LA(1)
                    if not (_la == geneticalParser.PLUS or _la == geneticalParser.MINUS):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                    self.state = 137
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 138
                self.atom()
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 152
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input, 12, self._ctx)
            while _alt != 2 and _alt != ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 150
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input, 11, self._ctx)
                    if la_ == 1:
                        localctx = geneticalParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 141
                        if not self.precpred(self._ctx, 5):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 5)")
                        self.state = 142
                        self.match(geneticalParser.POW)
                        self.state = 143
                        self.expression(6)
                        pass

                    elif la_ == 2:
                        localctx = geneticalParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 144
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 145
                        _la = self._input.LA(1)
                        if not (_la == geneticalParser.TIMES or _la == geneticalParser.DIV):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 146
                        self.expression(5)
                        pass
